Fix horizontal scroll issue on all screen sizes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,6 +47,10 @@ a:hover {
     color: #f8eded;
 }
 
+.header-row {
+    margin: 0;
+}
+
 .message-container {
     position: fixed;
     top: 72px;
